--- a/MECApp/src/index.html
+++ b/MECApp/src/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="../node_modules/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet">
   <link href="//fonts.lug.ustc.edu.cn/icon?family=Material+Icons" rel="stylesheet">
+  <link href="assets/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
   <app-root>Loading...</app-root>
