--- a/App/src/index.html
+++ b/App/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>MECApp</title>
+  <title>App</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
