--- a/App/src/index.html
+++ b/App/src/index.html
@@ -12,5 +12,7 @@
 </head>
 <body>
   <app-root>Loading...</app-root>
+  <script type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js"></script>
+  <script type="text/javascript" src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
